<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/pop_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView android:id="@+id/tv_dlg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DlG_ALERT_TITER"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView android:id="@+id/tv_dlg_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="15sp"
                    android:lineSpacingExtra="3dp"
                    tools:text="@string/POP_64"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">

                <Button android:id="@+id/btn_dlg_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/DLG_ALERT_CANCEL"
                    android:background="@null"/>

                <Button android:id="@+id/btn_dlg_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:paddingEnd="20dp"
                    android:gravity="end|center"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/DLG_ALERT_OK"
                    android:background="@null"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>