<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="89dp"
                android:background="@drawable/bizplay_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="72dp"
                android:background="@drawable/box_stroke"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_id"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/A005_3"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions"
                        android:maxLength="50"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColor="#3e4449"
                        android:textColorHint="#a4a4a4"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/iv_clear_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="9dp"
                        android:background="@drawable/text_del_icon"
                        android:visibility="gone" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dfe2e5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="visible">

                            <EditText
                                android:id="@+id/et_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:inputType="textNoSuggestions|textVisiblePassword"
                                android:maxLength="50"
                                android:hint="@string/A005_4"
                                android:textColorHint="#a4a4a4"
                                android:paddingLeft="10dp"
                                android:maxLines="1"
                                android:textStyle="bold"
                                android:textColor="#3e4449"
                                android:textSize="15sp" />
                        </FrameLayout>

                    </FrameLayout>

                    <CheckBox
                        android:id="@+id/switch_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="9dp"
                        android:button="@null"
                        android:background="@drawable/eye_toggle"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_button_bg"
                android:text="@string/A005_1"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textAllCaps="false" />

            <CheckBox
                android:id="@+id/chk_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:button="@drawable/chk_remember"
                android:checked="true"
                android:paddingLeft="11dp"
                android:text="@string/A005_8"
                android:textColor="#727577"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>